--- a/deployment.tex
+++ b/deployment.tex
@@ -1,6 +1,13 @@
 \section{Motivating Scenarios}
 \label{s:deploy}
-\radhika{need a better title?}
+%\radhika{need a better title?}
+\begin{figure*}
+    \centering
+    \includegraphics[width=\textwidth]{img/deployment-arch.pdf}
+    \caption{Simplified respresentation of \name's deployment. 
+    The \inbox sits at the sending domain's egress and \outbox sits at the receiving domain's ingress. All traffic  gets bundled together for scheduling. Bottleneck exists between the \inbox and the \outbox.
+    }\label{fig:deploy:arch}
+\end{figure*}
 
 \radhika{outline:/*}
 
