--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -18,8 +18,12 @@
 %\setlength{\belowdisplayskip}{-5pt}
 
 \newcommand{\name}{Bundler\xspace}
-\newcommand{\inbox}{\textit{send-box}\xspace}
-\newcommand{\outbox}{\textit{receive-box}\xspace}
+\newcommand{\inbox}{sendbox\xspace}
+\newcommand{\outbox}{receivebox\xspace}
+\newcommand{\pair}{\inbox -- \outbox pair\xspace}
+\newcommand{\egsender}{Boogle}
+\newcommand{\egreceiver}{UC Bundley}
+
 \begin{document}
 \title{Taking Control of Your Traffic By Living on the Edge}
 \author{Paper 91, \pageref{p:end} pages}
