--- a/ref.bib
+++ b/ref.bib
@@ -1666,3 +1666,21 @@ year = {2016},
  booktitle = {IMC},
  year = {2011},
 } 
+
+@misc{isp-throttle-1,
+    title = {{ISPs do throttle traffic -- and the FCC can't stop it}},
+    howpublished = {\url{https://www.infoworld.com/article/2940538/internet/isps-do-throttle-traffic-and-the-fcc-cant-stop-it.html}},
+    year = {2015}
+}
+
+@misc{isp-throttle-2,
+    title = {{Research Study Proves ISPs Are Throttling Streaming Services Post Net Neutrality}},
+    howpublished = {\url{https://hothardware.com/news/research-study-isps-throttling-streaming-services-post-net-neutrality}},
+    year = {2018}
+}
+
+@misc{isp-throttle-3,
+    title = {{ISP Bandwidth Throttling Explained}},
+    howpublished = {\url{https://www.purevpn.com/blog/isp-bandwidth-throttling-explained/}},
+    year = {2017}
+}
