--- a/eval.tex
+++ b/eval.tex
@@ -88,6 +88,11 @@ Unsurprisingly, the FCTs with FIFO scheduling at \name are \emph{worse}: with a 
 In Figure~\ref{fig:eval:lowdelays}, we show that when we configure the scheduling policy at \inbox, we can change the RTTs component connections observe.
 Note that due to the effect discussed above, using FIFO scheduling results in higher delays than the \baseline case.
 
+\input{strict-prio}
+\paragrapha{Strict Prioritization}\label{s:eval:strictprio}
+In Figure~\ref{fig:eval:strict-prio}, there are two classes of traffic transitting \name: a high-priority and low-priority class. Using a priority scheduler at \name can improve FCTs for the high-priority class. 
+When compared to fair queueing in this scenario, prioritization achieves $47$\% lower $99^{\text{th}}$\%ile FCT for the prioritized traffic class.
+
 \input{waterfall}
 \paragrapha{Rate Fairness and Stability}\label{s:eval:waterfall}
 In Figure~\ref{fig:eval:waterfall}, we show that \name, when configured with a fair scheduler, achieves fair and stable rates compared to the \baseline.
@@ -104,15 +109,6 @@ stream converges to its fair share within 2 seconds and is able to maintain that
 entirety of the stream. This stability provides the best scenario for the ABR algorithm to select
 the highest possible bitrate and thus maximize QoE.
 }
-
-\paragrapha{Strict Priorities}
-
-\begin{outline}
-    \1 \name can support strict priorities for interactive traffic.
-    \1 Experiment: backlogged iperf flows are in a lower priority queue and interactive ETG flows are in a high priority queue.
-\end{outline}
-
-%\radhika{need to further clean this.}
 
 \subsection{Terminating TCP Connections}\label{s:eval:proxy}
 An alternate implementation choice for a \name would use a TCP proxy to terminate connections at the \inbox. 
