--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -1,5 +1,8 @@
 \documentclass[format=sigconf,10pt,natbib=false,top=1in,bottom=0.8in,authordraft]{acmart}
 \usepackage{geometry}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+%\usepackage{algorithmicx}
 %\headheight 0pt
 %\textheight 9.25in
 \settopmatter{printacmref=false}
@@ -20,9 +23,7 @@
 \newcommand{\name}{Bundler\xspace}
 \newcommand{\inbox}{sendbox\xspace}
 \newcommand{\outbox}{receivebox\xspace}
-\newcommand{\pair}{\inbox -- \outbox pair\xspace}
-\newcommand{\egsender}{Boogle}
-\newcommand{\egreceiver}{UC Bundley}
+\newcommand{\pair}{\inbox-\outbox pair\xspace}
 
 \begin{document}
 \title{Taking Control of Your Traffic By Living on the Edge}
