--- a/ref.bib
+++ b/ref.bib
@@ -1667,6 +1667,12 @@ year = {2016},
  year = {2011},
 } 
 
+@misc{labovitz,
+    title = {{Internet Inter-Domain Traffic}},
+    howpublished = {\url{https://conferences.sigcomm.org/sigcomm/2010/slides/S3Labovitz.pdf}},
+    year = {2010}
+}
+
 @misc{isp-throttle-1,
     title = {{ISPs do throttle traffic -- and the FCC can't stop it}},
     howpublished = {\url{https://www.infoworld.com/article/2940538/internet/isps-do-throttle-traffic-and-the-fcc-cant-stop-it.html}},
