--- a/robust.tex
+++ b/robust.tex
@@ -1,14 +1,15 @@
-\subsection{Impact of Congestion Control}\label{s:robust:cross}\label{s:eval:cc}
+\subsection{Impact of Congestion Control} \label{s:robust:cross}\label{s:eval:cc}
 How does our choice of congestion control impact our results? 
 We first verify that \name indeed runs congestion control algorithms appropriately.
 \input{tput-delay}
 Figure~\ref{fig:eval:tputdelay} shows that for two of the three congestion control algorithms we evaluate --- Copa~\cite{copa} and Nimbus~\cite{nimbus} --- the throughput (in Figure~\ref{fig:eval:tputdelay:a}) and queueing delay (in Figure~\ref{fig:eval:tputdelay:b}) distributions over a one-minute experiment are similar to the same algorithm running at the end-host (\ie without \name).
 
-\an{maybe cut BBR entirely}
-\an{
+Furthermore, \name is compatible with multiple endhost congestion control algorithms.
+When we configure endhosts to use BBR\footnote{We use the BBR implementation provided in Linux $4.13$.} (as opposed to Cubic, as above), \name's benefits remain: \name achieves 58\% lower FCTs in the median.
+This is primarily because in the \baseline using BBR causes endhosts to achieve 66\% worse median slowdown ($1.62$ with Cubic to $2.68$ with BBR); \name's slowdown is only 5\% worse when endhosts use BBR ($1.08$ with Cubic to $1.14$ with BBR).
+
 BBR's~\cite{bbr} delay distribution suffers because of its interaction with the end-to-end congestion control. When BBR enters its \texttt{PROBE\_RTT} mode by setting a congestion window of $4$ packets, end-host implementations simply stop transmitting.
 However, with \name the end-host implementation is Cubic; it continues probing for bandwidth until the \inbox is forced to drop packets.
-}
 
 Furthermore, correct congestion control behavior is crucial to achieving low FCTs.
 In Figure~\ref{fig:eval:cc} we compare three congestion control protocols to the Baseline: BBR~\cite{bbr}, Nimbus~\cite{nimbus}, and Copa~\cite{copa}.
