--- a/measure.tex
+++ b/measure.tex
@@ -30,7 +30,7 @@ Suppose the desired epoch size, i.e. the number of packets between two epoch bou
 % More generally, any strategy that requires packet-level synchronization of the \inbox and
 % \outbox is untenable because any coordination would race the packets themselves \radhika{i don't quite understand the last sentence}.
 
-Our technique side-steps these issues by simply using the contents of a packet to pickin epoch boundaries More specifically, a packet is sampled as a boundary for an epoch of size $N$, if the hash over a subset of its fields is a multiple of $N$. Therefore, given sufficient entropy in the hashed values, an epoch boundary will be sampled, in expectation, once every $N$ packets.
+Our technique side-steps these issues by determining epoch boundaries using only the contents of a packet. More specifically, a packet is sampled as a boundary for an epoch of size $N$, if the hash over a subset of its fields is a multiple of $N$. Therefore, given sufficient entropy in the hashed values, an epoch boundary will be sampled, in expectation, once every $N$ packets.
 
 % The key idea of our methodology is that we can avoid such a synchronization problem by determining the boundary of an epoch using only information contained in the packet.
 % Specifically, we propose the following: a packet $p$ is an epoch boundary packet if the hash 
